css/main.css
/* ... */
.circles p {
    font-weight: lighter;
    font-size: 0.95em;
    margin: 0.45em 0;
    color: #fff;
}
ul.circles {
    padding: 0 5%;
    text-align: center;
    margin: 30px auto 0;
    width: 90%;
}
.services-left h3 {
    font-size: 1.15em;
    font-weight: bold;
    margin: 0;
    line-height: 1.25em;
}
.services-left p {
    font-size: 1em;
    margin: 0;
}
.contact-box input, .contact-box label, .contact-box h3 {
    font-family: 'Open Sans Hebrew', Ariel, sans-serif;
    font-weight: 200;
    font-size: 2em;
}
.contact-box p {
    font-family: 'Open Sans Hebrew', Ariel, sans-serif;
    font-size: 1em;
    font-weight: 200;
}
footer p {
    font-family: 'Open Sans Hebrew', Ariel, sans-serif;
    font-size: 1.2em;
    font-weight: 200;
    text-align: center;
}
footer p em {
    font-weight: bold;
    font-style: normal;
}
/*****************************/
/*   dimensions and colors   */
/*****************************/

header {
    height: 6em;
    position: fixed;
    z-index: 10;
    background: rgba(0, 0, 0, 0.46);
    border-bottom: 1px solid rgba(0, 0, 0, 0.46);
    width: 100%;
    -webkit-transition: all 0.4s ease-in;
    -moz-transition: all 0.4s ease-in;
    -o-transition: all 0.4s ease-in;
    transition: all 0.4s ease-in;
    left: 0;
    right: 0;
    -webkit-transform: translate3d(0, 0, 0);
}
section.hero {
    background: url('../img/hero-bg.jpg') center center no-repeat;
    color: #fff;
    background-size: cover;
    background-attachment: fixed;
}
section.hero nav ul li {
    -webkit-transition: all .25s;
    -moz-transition: all .25s;
    -o-transition: all .25s;
    -ms-transition: all .25s;
    transition: all .25s;
}
section.hero nav ul li:hover {
    border-bottom: inset -2px solid #FF9999;
    box-shadow: inset 0 -4px 0 0 #FF9999;
    background: none;
}
section.hero nav ul li.active {
    border-bottom: inset -2px solid #ee5f5f;
    box-shadow: inset 0 -4px 0 0 #ee5f5f;
    background: none;
}
nav {
    height: 6em;
    line-height: 6em;
    position: relative;
    width: 100%;
    top: 0;
    right: 17%;
    background: none;
    box-shadow: none;
    -webkit-transition: all 0.5s ease-in;
    -moz-transition: all 0.5s ease-in;
    -o-transition: all 0.5s ease-in;
    -ms-transition: all 0.5s ease-in;
    transition: all 0.5s ease-in;
    /*z-index: 500;*/
}
.logo {
    width: 109px;
    height: 70px;
    position: absolute;
    top: 15px;
    left: 17%;
    -webkit-transition: all 0.4s ease-in;
    -moz-transition: all 0.4s ease-in;
    -o-transition: all 0.4s ease-in;
    transition: all 0.4s ease-in;
}
div.logo>a, div.small-logo>a {
    width: 109px;
    height: 70px;
    display: inline-block;
    position: relative;
    z-index: 1;
    font-size: 4.25em;
    color: #EE5F5F;
}
/*object{
    pointer-events: none;
    position: relative; 
z-index: -1;
}*/
/*object.bliss-logo{
    height: 70px;
    width: 109px;
}*/
/*.small-logo object.bliss-logo{
    height: 50px;
    width: 78px;
        pointer-events: none;
    position: relative; 
z-index: -1
}*/

header.fixed-nav {
    /*height: 5em;
    position: fixed;
    z-index: 100;*/
    
    background: #fff;
    /*border-bottom: 1px solid rgba(0, 0, 0, 0.46);*/
    /*width: 100%;*/
    
    -webkit-transition: all 0.4s ease-in;
    -moz-transition: all 0.4s ease-in;
    -o-transition: all 0.4s ease-in;
    transition: all 0.4s ease-in;
}
header.fixed-nav .logo {
    /*top: 7px;*/
    /*-webkit-transition: all 0.4s ease-in;*/
    /*-moz-transition: all 0.4s ease-in;*/
    /*-o-transition: all 0.4s ease-in;*/
    /*transition: all 0.4s ease-in;*/
}
header.fixed-nav>nav {
    /*height: 5em;*/
    /*line-height: 5em;*/
    /*-webkit-transition: all 0.4s ease-in;*/
    /*-moz-transition: all 0.4s ease-in;*/
    /*-o-transition: all 0.4s ease-in;*/
    /*transition: all 0.4s ease-in;*/
}
header.fixed-nav>nav a {
    color: #000;
}
.small-header {
    display: none;
}
.main-header {
    position: fixed;
    display: table-cell;
    vertical-align: middle;
    top: 50%;
    left: 50%;
    -webkit-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
    /*    z-index: 0;
*/
}
.scroll-down {
    text-align: center;
    position: fixed;
    bottom: 80px;
    bottom: 10vh;
    left: 0;
    right: 0;
    /*z-index: 1;*/
    
    font-size: 1.75em;
}
section.about {
    background: #fff;
    position: relative;
    /*z-index: 9;*/
    
    height: auto;
    /*height: 950px;*/
    
    width: 100%;
    /* for full hd screens */
}
.about-left {
    background: #ee5f5f;
    width: 40%;
    position: static;
    padding: 5% 0;
    /*display: table-cell;*/
    
    vertical-align: middle;
    height: inherit;
}
.about-right {
    margin: 0 auto;
    width: 60%;
    padding: 5% 14%;
    position: absolute;
}
.about-row {
    margin-bottom: 0;
    padding-bottom: 0;
}
.icon-green {
    color: #34d475;
}
.icon-red {
    color: #f05f5a;
}
section.comp-break {
    /*background: url('../img/pacman.jpg') center center no-repeat;*/
    
    position: relative;
    height: 325px;
}
section.services {
    position: relative;
    /*z-index: 9;*/
    
    background: #f5f5f5;
    padding: 5%;
    /*display: table-cell;*/
    
    vertical-align: middle;
}
.services-row {
    margin: 4em auto 0;
    width: 80%;
    display: block;
}
.row .col {
    padding: 0;
}
.services-row .s4 {
    padding-right: 3%;
    display: inline-block;
    position: relative;
}
.set-bottom {
    position: absolute;
    bottom: 0;
    margin-bottom: 0;
}
section.clients {
    position: relative;
    /*z-index: 9;*/
    
    padding: 5% 0;
    /*display: table-cell;*/
    
    width: 100%;
    min-height: 1000px;
    /*height: 100vh;*/
    
    vertical-align: middle;
    display: block;
}
.clients-full {
    display: none;
    text-align: center;
    margin: 0 auto;
    height: 450px;
}
/* ... */

